--- a/index.html
+++ b/index.html
@@ -8,69 +8,78 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,200i,400,400i,700,700i" rel="stylesheet">
   </head>
 	<body>
-    <div style="background-image: url('https://source.unsplash.com/random/2000x400?sig=001');">
+
+    <div class="page-feature" style="background-image: url('https://source.unsplash.com/random/2000x400?sig=001');">
       <h2><i class="fab fa-css3-alt"></i></h2>
     </div>
-    <div>
-      <div>
+
+    <div class="container">
+      <div class="article">
         <h1>CSS is <strong>!important</strong></h1>
-        <ul>
-          <li>
-            <span>Primary Item</span>
-            <ul>
-              <li>
-                <span>Secondary Item</span>
-              </li>
-              <li>
-                <span>Secondary Item</span>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <span>Primary Item</span>
-            <ul>
-              <li>
-                <span>Secondary Item</span>
-                <ul>
-                  <li><span>Tertiary Item</span></li>
-                  <li><span>Tertiary Item</span></li>
-                  <li><span>Tertiary Item</span></li>
-                  <li><span>Tertiary Item</span></li>
-                  <li><span>Tertiary Item</span></li>
-                  <li><span>Tertiary Item</span></li>
-                  <li><span>Tertiary Item</span></li>
-                </ul>
-              </li>
-              <li>
-                <span>Secondary Item</span>
-                <ul>
-                  <li><span>Item</span></li>
-                  <li><span>Item</span></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <span>Primary Item</span>
-          </li>
-          <li>
-            <span>Primary Item</span>
-          </li>
-          <li>
-            <span>Primary Item</span>
-            <ul>
-              <li>
-                <span>Secondary Item</span>
-              </li>
-              <li>
-                <span>Secondary Item</span>
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <div>
+
+        <!-- Start Challenge area // DO NOT EDIT ABOVE THIS LINE -->
+
+          <ul>
+            <li>
+              <span>Primary Item</span>
+              <ul>
+                <li>
+                  <span>Secondary Item</span>
+                </li>
+                <li>
+                  <span>Secondary Item</span>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <span>Primary Item</span>
+              <ul>
+                <li>
+                  <span>Secondary Item</span>
+                  <ul>
+                    <li><span>Tertiary Item</span></li>
+                    <li><span>Tertiary Item</span></li>
+                    <li><span>Tertiary Item</span></li>
+                    <li><span>Tertiary Item</span></li>
+                    <li><span>Tertiary Item</span></li>
+                    <li><span>Tertiary Item</span></li>
+                    <li><span>Tertiary Item</span></li>
+                  </ul>
+                </li>
+                <li>
+                  <span>Secondary Item</span>
+                  <ul>
+                    <li><span>Item</span></li>
+                    <li><span>Item</span></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <span>Primary Item</span>
+            </li>
+            <li>
+              <span>Primary Item</span>
+            </li>
+            <li>
+              <span>Primary Item</span>
+              <ul>
+                <li>
+                  <span>Secondary Item</span>
+                </li>
+                <li>
+                  <span>Secondary Item</span>
+                </li>
+              </ul>
+            </li>
+          </ul>
+
+        <!-- End Challenge Area // DO NOT EDIT BELOW THIS LINE -->
+
+        <div class="diamond">
           <i class="fab fa-css3-alt"></i>
         </div>
+
       </div>
     </div>
   </body>
