--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!-- Start Challenge area // DO NOT EDIT ABOVE THIS LINE -->
 
-          <ul>
+          <ul class="sitemap">
             <li>
               <span>Primary Item</span>
               <ul>
