--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2><i class="fab fa-css3-alt"></i></h2>
     </div>
 
-    <div class="container">
+    <div class="container ultra">
       <div class="article">
         <h1>CSS is <strong>!important</strong></h1>
 
